--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.6",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^50.0.5",
+    "expo-font": "^11.10.2",
+    "expo-status-bar": "~1.2.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "^0.73.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
