--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
