--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 API_KEY="AIzaSyCZ7WhCe8maArHucFPNLXWPpsLNslX1sCc"
+BASE_URL="https://react-native-app-91aff-default-rtdb.firebaseio.com/"
+MAP_KEY="AIzaSyBiKu0wazQAVR_Wg47oOz2BaS7qbvdI6RA"
 # AUTH_DOMAIN=
 # PROJECT_ID=
 # STORAGE_BUCKET=
